# in-code-we-trust

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py  settings.toml
alembic/: env.py
alembic/versions/: 028008012afe_seed_discount.py  12ad67f85c17_add_discount.py  5b2a6a59d6cd_init_tables.py  dd911b2229f2_seed_data.py
app/: cache.py  database.py  models.py  server.py
app/routes/: __init__.py  products.py  sales.py
